[package]
name = "gallery-rs"
version = "0.1.0"
authors = ["RubyUmbra <rubyumbra@gmail.com>"]
edition = "2018"
description = "Image sorting application."

[dependencies]
glob = "0.3.0"
imagesize = "0.8.8"
clap = "3.0.0-beta.4"

[dependencies.sdl2]
version = "0.34.5"
default-features = false
features = ["image"]
