[package]
name = "gallery-rs"
version = "0.1.0"
authors = ["RubyUmbra <rubyumbra@gmail.com>"]
edition = "2024"
description = "Image sorting application."

[dependencies]
imagesize = "0.14.0"
thiserror = "2.0.12"

[dependencies.clap]
version = "4.5.37"
features = ["cargo"]

[dependencies.sdl2]
version = "0.37.0"
default-features = false
features = ["image"]
